--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 sudo: false
 language: node_js
 node_js:
-  - "5"
   - "6"
 
 before_install:
   - npm install npm@latest -g
+  - npm install -g firebase-tools
 
 script:
   - node --version
   - npm --version
-  - npm run build
+  - yarn run build
+
+after_success:
+  - firebase deploy --token $FIREBASE_TOKEN
